crates/pampa/snapshots/error-corpus/json/007.snap
---
source: crates/quarto-markdown-pandoc/tests/test_error_corpus.rs
expression: json_string
---
[
  {
    "code": "Q-2-5",
    "kind": "error",
    "location": {
      "Original": {
        "end_offset": 11,
        "file_id": 0,
        "start_offset": 10
      }
    },
    "problem": {
      "content": "I reached the end of the block before finding a closing '_' for the emphasis.",
      "type": "markdown"
    },
    "title": "Unclosed Emphasis"
  }
]
